build: Updated surefire plugin configurations to laod a static Java agent; to open up core Java packages for Mockito; and disables class data sharing (CDS) in the JVM.